apps/grafana/overlays/ops/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    link.argocd.argoproj.io/external-link: https://grafana.cluster.sciops.net
spec:
  hosts:
    - "grafana.cluster.sciops.net"
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 80
            host: grafana.monitoring.svc.cluster.local
